--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -768,7 +768,7 @@
  	 	 	},
  	 	 	"changePictureDescription": {
  	 	 	 	"trans": "Abychom vám poskytli co nejlepší zážitek, bez nutnosti platit  za výhru, je nutné, aby všechny placené funkce byly kosmetické, jako jsou profilové obrázky a rámečky chatu, \n                                                nebo hromadné akce, které jsou výhodou pro všechny hráče :)\n                                                Doufáme, že si tento zážitek užijete!",
- 	 	 	 	"eng": "To provide the best No Pay-to-Win experience to you, it is necessary that all paid features are cosmetic like profile images & chat frames, \n                                                or global buffs that benefits everyone in game :)\n                                                Hope you enjoy the No Pay-to-Win experience!""
+ 	 	 	 	"eng": "To provide the best No Pay-to-Win experience to you, it is necessary that all paid features are cosmetic like profile images & chat frames, \n                                                or global buffs that benefits everyone in game :)\n                                                Hope you enjoy the No Pay-to-Win experience!"
  	 	 	},
  	 	 	"confirm": {
  	 	 	 	"trans": "Přispět nyní",
