--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -1051,7 +1051,7 @@
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
  	 	 	 	 	"trans": "Vypadá to, že nemáte s sebou žádné léky, nakupte je ve městě v Trinoky Martu předtím, než vstoupite do dungeonu, váš život v dungeonech po bitvě není regenerován",
-         "eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon",
+         "eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
          
  	 	 	 	},
  	 	 	 	"cancel": {
