--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -754,11 +754,11 @@
  	 	},
  	 	"healing1": {
  	 	 	"name": {
- 	 	 	 	"trans": "[의료] 타이레놀",
+ 	 	 	 	"trans": "[의료] 진통제",
  	 	 	 	"eng": "Pain Away"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "두통이 있나요? 이 타이레놀™로 통증을 완화해 보세요!",
+ 	 	 	 	"trans": "두통이 있나요? 진통제™ 한 방으로 날려버리세요!",
  	 	 	 	"eng": "Do you have headache? Use Pain Away™ to relieve your pain!"
  	 	 	}
  	 	},
@@ -834,11 +834,11 @@
  	 	},
  	 	"healingArea1": {
  	 	 	"name": {
- 	 	 	 	"trans": "[의료] 타이레놀 스프레이",
+ 	 	 	 	"trans": "[의료] 진통 스프레이",
  	 	 	 	"eng": "Pain Away Spray"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "친구와 함께 두통을 겪고 있습니까? 이 타이레놀 스프레이™로 통증을 완화해 보세요!",
+ 	 	 	 	"trans": "당신 뿐 만 아니라 친구분도 두통이시라구요? 진통 스프레이™ 하나면 충분하죠!",
  	 	 	 	"eng": "Do you and your friends both have headaches? Use Pain Away Spray™ to relief your pain!"
  	 	 	}
  	 	},
