--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -3744,7 +3744,7 @@
  	 	 	 	"eng": "Animals Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Увеличивает урон банде «Животные»",
+ 	 	 	 	"trans": "Повышает урон банде «Животные»",
  	 	 	 	"eng": "Increases damage to Enemies of Animals gang"
  	 	 	}
  	 	},
@@ -3754,7 +3754,7 @@
  	 	 	 	"eng": "Voodoo Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Увеличивает урон банде «Вудуисты»",
+ 	 	 	 	"trans": "Повышает урон банде «Вудуисты»",
  	 	 	 	"eng": "Increases damage to Enemies of Voodoo Boys gang"
  	 	 	}
  	 	},
@@ -3764,7 +3764,7 @@
  	 	 	 	"eng": "Scavengers Nemesis"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Увеличивает урон банде «Падальщики»",
+ 	 	 	 	"trans": "Повышает урон банде «Падальщики»",
  	 	 	 	"eng": "Increases damage to Enemies of Scavengers gang"
  	 	 	}
  	 	},
@@ -3774,7 +3774,7 @@
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Банда «Падальщики» наносит вам увеличенный урон",
+ 	 	 	 	"trans": "Банда «Падальщики» наносит вам повышенный урон",
  	 	 	 	"eng": "Enemies of Scavengers gang deals increased damage to you"
  	 	 	}
  	 	},
@@ -4156,7 +4156,7 @@
  	 	 	 	"eng": "As this game is made by only one person, it's very difficult translate all languages correctly, but I am working on adding more translations :)"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Вы можете изменить язык в любое время в настройках",
+ 	 	 	 	"trans": "В любое время вы можете изменить язык в настройках",
  	 	 	 	"eng": "You can change language anytime at the settings page"
  	 	 	},
  	 	 	"dontShowAgain": {
@@ -4364,7 +4364,7 @@
  	 	 	},
  	 	 	"useItem": {
  	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "Ты не можешб использовать элемент во время уличных боев, предметы доступны только во время подземелья",
+ 	 	 	 	 	"trans": "Ты не можешь использовать элемент во время уличных боев, предметы доступны только во время подземелья",
  	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
  	 	 	 	}
  	 	 	}
