--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -91,7 +91,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Encontrarás el mejor Equipo aquí, créeme."
+ 	 	 	 	 	"Encontrarás el mejor equipo aquí, créeme."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
