--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -528,7 +528,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"zoneName"
  	 	 	 	],
- 	 	 	 	"trans": "[AFKリソース収集] \r\n                     ${zoneName}内を探索し、便利なアイテムを調達する。 \r\n                     運が良ければ、あるいは！",
+ 	 	 	 	"trans": "[AFKリソース収集] \r\n                     ${zoneName}内を探索し、ガラクタを集めて漁ります。\r\n                     運が良ければ、便利なアイテムが手に入ることも！",
  	 	 	 	"eng": "[AFK Resource Gather]\r\n                    Search around in ${zoneName} and scavenge for useful items.\r\n                    Who knows, maybe you'll get lucky!"
  	 	 	}
  	 	},
@@ -2961,7 +2961,7 @@
  	 	 	 	"eng": "Abort"
  	 	 	},
  	 	 	"newbieTip": {
- 	 	 	 	"trans": "あなたがゲームを閉じたとしてもタスクは続くでしょう",
+ 	 	 	 	"trans": "ゲームを閉じている間もタスクは進行します",
  	 	 	 	"eng": "The task will continue even if you close the game"
  	 	 	},
  	 	 	"abortWarning": {
@@ -3070,7 +3070,7 @@
  	 	 	 	 	"eng": "Later"
  	 	 	 	},
  	 	 	 	"confirm": {
- 	 	 	 	 	"trans": "都市に戻る",
+ 	 	 	 	 	"trans": "中心街に戻る",
  	 	 	 	 	"eng": "Back to city"
  	 	 	 	}
  	 	 	},
@@ -4152,7 +4152,7 @@
  	 	 	 	"eng": "Unofficial translation"
  	 	 	},
  	 	 	"description1": {
- 	 	 	 	"trans": "このゲームは一人の人だけによって作られているので、すべての言語を正しく翻訳するのはとても困難ですが、私はより多くの翻訳を追加することに取り組んでいます:)",
+ 	 	 	 	"trans": "このゲームは私一人だけで開発しているため、すべての言語を正しく翻訳するのはとても困難ですが、より多くの翻訳を追加することに取り組んでいます:)",
  	 	 	 	"eng": "As this game is made by only one person, it's very difficult translate all languages correctly, but I am working on adding more translations :)"
  	 	 	},
  	 	 	"description": {
