Update russian localization

--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -290,7 +290,7 @@
  	 	 	 	"eng": "Cosmetic Cyberwear"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Если вам понравилась игра, можете поддержать игру деньгами :)",
+ 	 	 	 	"trans": "Если вам понравилась игра, можете поддержать игру материально :)",
  	 	 	 	"eng": "If you liked the game, please consider donation :)"
  	 	 	},
  	 	 	"canAccessError": {
@@ -548,7 +548,7 @@
  	 	 	 	"eng": "Decrypt memory shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Расшифруй найденный фрагмент памяти для получения полезной информации ",
+ 	 	 	 	"trans": "Расшифруй найденный фрагмент памяти для получения полезной информации.",
  	 	 	 	"eng": "Decrypt a memory shard to retrieve useful intel."
  	 	 	}
  	 	},
@@ -568,7 +568,7 @@
  	 	 	 	"eng": "Play MEGA Pachinko Game"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Привет!! ^___^\r\n        Cыграйте в MEGA Pachinko! Есть шанс выиграть ОГРОМНЫЕ ЭПИЧЕСКИЕ награды\r\n        всего 5000 BTC за сеанс, ОГРАНИЧЕННОЕ ПРЕДЛОЖЕНИЕ!!! <3<3<3\r\n        ##Особая благодарность Militech за спонсорство данного события##",
+ 	 	 	 	"trans": "Привет!! ^___^\r\n        Cыграйте в MEGA Pachinko! Есть шанс выиграть ОГРОМНЫЕ ЭПИЧЕСКИЕ награды\r\n        всего 5000 BTC за сеанс, ОГРАНИЧЕННОЕ ПРЕДЛОЖЕНИЕ!!! <3<3<3\r\n        ##Особая благодарность Militech за спонсирование данного события##",
  	 	 	 	"eng": "Konnichiwa!! ^___^\r\n        Come play the MEGA Pachinko! With chance to win HUGE EPIC rewards\r\n        only 5000 btc per session, LIMITED TIME OFFER!!! <3<3<3\r\n        ##Special thanks for Militech for sponsoring this event##"
  	 	 	}
  	 	},
@@ -3973,7 +3973,7 @@
  	 	 	},
  	 	 	"goodReview": {
  	 	 	 	"title1": {
- 	 	 	 	 	"trans": "Ух ты, большое спасибо! Для меня большая честь, пожалуйста, сделайте это официально, оставив отзыв на странице нашего магазина :)",
+ 	 	 	 	 	"trans": "Ух ты, большое спасибо! Для меня большая честь, пожалуйста, сделайте это официально, оставив отзыв на нашей странице в магазине приложений :)",
  	 	 	 	 	"eng": "Wow, thanks so much! I'm honored, please make it official by leaving them on our store page :)"
  	 	 	 	},
  	 	 	 	"title2": {
@@ -4049,7 +4049,7 @@
  	 	 	},
  	 	 	"noShowToggle": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Вы можете увидеть полное руководство на вкладке «Профиль»",
+ 	 	 	 	 	"trans": "Вы можете увидеть полное руководство в Профиль > Руководство",
  	 	 	 	 	"eng": "You can see the full tutorial at Profile > Tutorial tab"
  	 	 	 	},
  	 	 	 	"label": {
@@ -4086,7 +4086,7 @@
  	 	 	 	"eng": "You will be MUTED if you breach any of the rules"
  	 	 	},
  	 	 	"footer2": {
- 	 	 	 	"trans": "Полный список правил можно найти в Профиль> Руководство> Правила",
+ 	 	 	 	"trans": "Полный список правил можно найти в Профиль > Руководство > Правила",
  	 	 	 	"eng": "Full list of rules can be found in Profile > Tutorials > Rules"
  	 	 	},
  	 	 	"disagreeButtonButton": {
@@ -4124,7 +4124,7 @@
  	 	 	 	"eng": "View Gang"
  	 	 	},
  	 	 	"sendGift": {
- 	 	 	 	"trans": "Послать подарок",
+ 	 	 	 	"trans": "Отправить подарок",
  	 	 	 	"eng": "Send Gift"
  	 	 	},
  	 	 	"sendPrivateMessage": {
@@ -4132,7 +4132,7 @@
  	 	 	 	"eng": "Send Private Message"
  	 	 	},
  	 	 	"reply": {
- 	 	 	 	"trans": "Отвечать",
+ 	 	 	 	"trans": "Ответить",
  	 	 	 	"eng": "Reply"
  	 	 	}
  	 	},
@@ -4191,7 +4191,7 @@
  	 	 	},
  	 	 	"reloadButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Перезагрузка",
+ 	 	 	 	 	"trans": "Перезагрузить",
  	 	 	 	 	"eng": "Reload"
  	 	 	 	}
  	 	 	}
@@ -4219,7 +4219,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"amount"
  	 	 	 	],
- 	 	 	 	"trans": "Это будет пожертвовать ${amount} Юнит(ов) из вашей учетной записи",
+ 	 	 	 	"trans": "Вы собираетесь пожертвовать ${amount} Юнит(ов) из вашей учетной записи",
  	 	 	 	"eng": "This will donate ${amount} Unit from your account"
  	 	 	},
  	 	 	"notEnough": {
@@ -4364,7 +4364,7 @@
  	 	 	},
  	 	 	"useItem": {
  	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "Ты не можешь использовать элемент во время уличных боев, предметы доступны только во время подземелья",
+ 	 	 	 	 	"trans": "Ты не можешь использовать этот предмет во время уличных боев, предметы доступны только во время подземелья",
  	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
  	 	 	 	}
  	 	 	}
@@ -4413,7 +4413,7 @@
  	 	 	 	"eng": "All PayPal purchases grants 10% additional Units! You may use paypal only on website version, simply login with your browser."
  	 	 	},
  	 	 	"paypalBonus": {
- 	 	 	 	"trans": "Вы получите дополнительные на 10% больше Юнитов, покупая через PayPal",
+ 	 	 	 	"trans": "Вы получите дополнительные 10% Юнитов, покупая через PayPal",
  	 	 	 	"eng": "You will receive additional 10% more Units with paypal purchase"
  	 	 	}
  	 	},
@@ -4676,7 +4676,7 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Зеленый кадр чата (с анимацией)",
+ 	 	 	 	 	"trans": "Зеленая рамка чата (с анимацией)",
  	 	 	 	 	"eng": "Green Chat Frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
@@ -4692,7 +4692,7 @@
  	 	 	 	 	"eng": "\"Elite\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Возможность мена изображения профиля",
+ 	 	 	 	 	"trans": "Возможность смены изображения профиля",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -4937,7 +4937,7 @@
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "Этот заголовок никогда не истечет. \\ Nit остается с вашей учетной записью навсегда.",
+ 	 	 	"trans": "Этот заголовок никогда не истечет. \\n Он останется с вашей учетной записью навсегда.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
@@ -5074,7 +5074,7 @@
  	 	 	"vars": [
  	 	 	 	"CURRENCY"
  	 	 	],
- 	 	 	"trans": "У тебя недостаточно ${CURRENCY}, чтобы купить это",
+ 	 	 	"trans": "У тебя недостаточно ${CURRENCY}, чтобы купить этот товар",
  	 	 	"eng": "You do not have enough ${CURRENCY} to purchase this item"
  	 	},
  	 	"slider": {
@@ -5250,7 +5250,7 @@
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Наносит повышенный урон банде «Вудуисты». Получает повышенный урон банды «Животные».",
+ 	 	 	 	"trans": "Наносит повышенный урон банде «Вудуисты». Получает повышенный урон от банды «Животные».",
  	 	 	 	"eng": "deals increased damage to Voodoo Boys gang. receives increased damage from Animals gang."
  	 	 	}
  	 	},
