--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -614,7 +614,7 @@
  	 	 	 	"amount",
  	 	 	 	"itemName"
  	 	 	],
- 	 	 	"trans": "${itemName}을 ${amount}개 획득했습니다",
+ 	 	 	"trans": "${itemName}(을)를 ${amount}개 획득했습니다",
  	 	 	"eng": "You received ${amount} ${itemName}"
  	 	},
  	 	"money": {
