--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -72,12 +72,12 @@
  	 	 	 	"eng": "Molecular 3d Printer"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Puedes utilizar tus Memorias para imprimir nuevo Equipo aquí",
+ 	 	 	 	"trans": "Puedes utilizar tus Cachés para imprimir nuevo Equipo aquí",
  	 	 	 	"eng": "You can use your Cache to print new equipment here"
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"¡Imprimiré lo que quieras si tienes la Memoria!"
+ 	 	 	 	 	"¡Imprimiré lo que quieras si tienes el Caché!"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll print whatever you want if you have the cache!"
@@ -91,7 +91,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Encontrarás el mejor Equipo aquí, créeme."
+ 	 	 	 	 	"Encontrarás el mejor equipo aquí, créeme."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
@@ -516,14 +516,14 @@
  	 	 	 	 	"tierName",
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "Memoria de ${typeName} ${tierName}",
+ 	 	 	 	"trans": "${tierName}: Caché de ${typeName}",
  	 	 	 	"eng": "${tierName} ${typeName} cache"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "Una Memoria de ${typeName} contiene información usada para la Impresión Molecular 3d, \r\n                    Puedes crear un ${typeName} con la Impresora Molecular 3d en el [Central Hub].\r\n                    \r\n                    Consejo: El nivel del objeto impreso se determina según tu Rango de Impresión,\r\n                    así que imprime siempre la basura primero, cuestan menos y son útiles para subir tu Rango de Impresión",
+ 	 	 	 	"trans": "Un Caché de ${typeName} contiene información usada para la Impresión Molecular 3d, \r\n                    Puedes crear un ${typeName} con la Impresora Molecular 3d en el [Central Hub].\r\n                    \r\n                    Consejo: El nivel del objeto impreso se determina según tu Rango de Impresión,\r\n                    así que imprime siempre la basura primero, cuestan menos y son útiles para subir tu Rango de Impresión",
  	 	 	 	"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -1624,7 +1624,7 @@
  	 	 	 	"eng": "Reach printing rank 3"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "El Nivel de artículos que imprime con las Memorias están determinados por su Rango de Impresión, \r\n         sube de nivel tu Rango de Impresión para que pueda imprimir elementos de Nivel superior. \r\n        \r\n         Puede usar la Impresora Molecular 3d en el Centro de la Ciudad, úsala para imprimir algunas Memorias y subir tu Rango de Impresión",
+ 	 	 	 	"trans": "El Nivel de artículos que imprime con los Cachés están determinados por su Rango de Impresión, \r\n         sube de nivel tu Rango de Impresión para que pueda imprimir elementos de Nivel superior. \r\n        \r\n         Puede usar la Impresora Molecular 3d en el Centro de la Ciudad, úsala para imprimir algunos Cachés y subir tu Rango de Impresión",
  	 	 	 	"eng": "The level of itemS you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -2401,11 +2401,11 @@
  	 	},
  	 	"noPrintableCaches": {
  	 	 	"title": {
- 	 	 	 	"trans": "Memoria de Equipo no encontrado",
+ 	 	 	 	"trans": "Caché de Equipo no encontrado",
  	 	 	 	"eng": "Equipment Cache not found"
  	 	 	},
  	 	 	"subTitle": {
- 	 	 	 	"trans": "Consigue Memorias de los enemigos y Mazmorras para imprimir tus nuevas armas y blindajes",
+ 	 	 	 	"trans": "Consigue Cachés de los enemigos y Mazmorras para imprimir tus nuevas armas y blindajes",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
  	 	 	}
  	 	},
@@ -3176,7 +3176,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "Aumente su Rango de Impresión usando Memorias para crear Equipo más poderoso",
+ 	 	 	 	"trans": "Aumente su Rango de Impresión usando Cachés para crear Equipo más poderoso",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"quickSlots": {
@@ -3952,7 +3952,7 @@
  	 	 	 	 	"from",
  	 	 	 	 	"to"
  	 	 	 	],
- 	 	 	 	"trans": "${de} => ${a}",
+ 	 	 	 	"trans": "${from} => ${to}",
  	 	 	 	"eng": "${from} => ${to}"
  	 	 	}
  	 	},
@@ -4038,7 +4038,7 @@
  	 	 	 	 	"from",
  	 	 	 	 	"to"
  	 	 	 	],
- 	 	 	 	"trans": "${de} => ${a}",
+ 	 	 	 	"trans": "${from} => ${to}",
  	 	 	 	"eng": "${from} => ${to}"
  	 	 	}
  	 	},
@@ -4989,7 +4989,7 @@
  	 	 	 	 	"eng": "Print equipment"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Usa Impresión Molecular 3d para imprimir cualquier Objeto de Memorias",
+ 	 	 	 	 	"trans": "Usa Impresión Molecular 3d para imprimir cualquier Objeto de Cachés",
  	 	 	 	 	"eng": "use molecular print to print any item cache"
  	 	 	 	}
  	 	 	},
