--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -3268,7 +3268,7 @@
  	 	 	 	"eng": "calibration"
  	 	 	},
  	 	 	"enemyGangsAndMark": {
- 	 	 	 	"trans": "敵のギャングと機器のマーク",
+ 	 	 	 	"trans": "敵のギャングと装備の属性",
  	 	 	 	"eng": "Enemy Gangs and Equipment Marks"
  	 	 	}
  	 	},
@@ -3320,7 +3320,7 @@
  	 	 	 	"eng": "Your account has been suspended automatically by the system due to Suspicious Activity"
  	 	 	},
  	 	 	"content": {
- 	 	 	 	"trans": "ご質問がある場合は、公式の不一致を介して直接Dexterに連絡してください。",
+ 	 	 	 	"trans": "ご質問がある場合は、公式のDiscordを介して直接Dexterに連絡してください。",
  	 	 	 	"eng": "If you have any questions please feel free to contact Dexter directly via official Discord (Link can be found in Floating Menu -> Links) or email to ching.huang.dexter@gmail.com"
  	 	 	}
  	 	},
