--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -381,7 +381,7 @@
  	 	 	 	 	 	"timeSkipMinutes",
  	 	 	 	 	 	"timeSkipCost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Globální skip (${timeSkipMinutes} minut, náklady ${timeSkipCost} jednotek)",
+ 	 	 	 	 	"trans": "Globální skip (${timeSkipMinutes} minut, náklady ${timeSkipCost} UNIT)",
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
@@ -647,7 +647,7 @@
  	 	 	},
  	 	 	"buyUnit": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Koupit Unity",
+ 	 	 	 	 	"trans": "Koupit UNIT",
  	 	 	 	 	"eng": "Buy Unit"
  	 	 	 	}
  	 	 	}
@@ -2375,7 +2375,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Unitů",
+ 	 	 	 	"trans": "${unit} UNIT",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -2383,7 +2383,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Obdržíte ${unit} Unitů (${bonus} navíc)",
+ 	 	 	 	"trans": "Obdržíte ${unit} UNIT (${bonus} navíc)",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -2392,7 +2392,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Unitů",
+ 	 	 	 	"trans": "${unit} UNIT",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	}
  	 	},
@@ -2401,7 +2401,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Unitů",
+ 	 	 	 	"trans": "${unit} UNIT",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -2409,7 +2409,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Obdržíte ${unit} Unitů (${bonus} navíc)",
+ 	 	 	 	"trans": "Obdržíte ${unit} UNIT (${bonus} navíc)",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -2418,7 +2418,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Unitů",
+ 	 	 	 	"trans": "${unit} UNIT",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -2426,7 +2426,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Obdržíte ${unit} Unitů (${bonus} navíc)",
+ 	 	 	 	"trans": "Obdržíte ${unit} UNIT (${bonus} navíc)",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -2435,7 +2435,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Unitů",
+ 	 	 	 	"trans": "${unit} UNIT",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -2443,7 +2443,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Obdržíte ${unit} Unitů (${bonus} navíc)",
+ 	 	 	 	"trans": "Obdržíte ${unit} UNIT (${bonus} navíc)",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -2452,7 +2452,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Unitů",
+ 	 	 	 	"trans": "${unit} UNIT",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -2460,7 +2460,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Obdržíte ${unit} Unitů (${bonus} navíc)",
+ 	 	 	 	"trans": "Obdržíte ${unit} UNIT (${bonus} navíc)",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -2469,7 +2469,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Unitů",
+ 	 	 	 	"trans": "${unit} UNIT",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -2477,7 +2477,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Obdržíte ${unit} Unitů (${bonus} navíc)",
+ 	 	 	 	"trans": "Obdržíte ${unit} UNIT (${bonus} navíc)",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -2486,7 +2486,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Unitů",
+ 	 	 	 	"trans": "${unit} UNIT",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -2494,7 +2494,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Obdržíte ${unit} Unitů (${bonus} navíc)",
+ 	 	 	 	"trans": "Obdržíte ${unit} UNIT (${bonus} navíc)",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	},
@@ -2503,7 +2503,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"unit"
  	 	 	 	],
- 	 	 	 	"trans": "${unit} Unitů",
+ 	 	 	 	"trans": "${unit} UNIT",
  	 	 	 	"eng": "${unit} Unit"
  	 	 	},
  	 	 	"description": {
@@ -2511,7 +2511,7 @@
  	 	 	 	 	"unit",
  	 	 	 	 	"bonus"
  	 	 	 	],
- 	 	 	 	"trans": "Obdržíte ${unit} Unitů (${bonus} navíc)",
+ 	 	 	 	"trans": "Obdržíte ${unit} UNIT (${bonus} navíc)",
  	 	 	 	"eng": "Receive ${unit} Unit (${bonus} bonus)"
  	 	 	}
  	 	}
@@ -2529,11 +2529,11 @@
  	 	},
  	 	"paypal": {
  	 	 	"paypalBonusTitle": {
- 	 	 	 	"trans": "Všechny PayPal nákupy zaručují 10% Jednotek navíc! PayPal můžete používat pouze na webové verzi, jednoduše se přihlaste přes prohlížeč.",
+ 	 	 	 	"trans": "Všechny PayPal nákupy zaručují 10% UNIT navíc! PayPal můžete používat pouze na webové verzi, jednoduše se přihlaste přes prohlížeč.",
  	 	 	 	"eng": "All PayPal purchases grants 10% additional Units! You may use paypal only on website version, simply login with your browser."
  	 	 	},
  	 	 	"paypalBonus": {
- 	 	 	 	"trans": "Dostanete další 10% Jednotek navíc s PayPal nákupem",
+ 	 	 	 	"trans": "Dostanete další 10% UNIT navíc s PayPal nákupem",
  	 	 	 	"eng": "You will receive additional 10% more Units with paypal purchase"
  	 	 	}
  	 	},
@@ -3776,7 +3776,7 @@
  	 	 	 	"eng": "Arasaka Unit Exchange"
  	 	 	},
  	 	 	"canAccessError": {
- 	 	 	 	"trans": "Musíte být alespoň na 3. úrovni pro přístup k výměně Unitů",
+ 	 	 	 	"trans": "Musíte být alespoň na 3. úrovni pro přístup k výměně UNIT",
  	 	 	 	"eng": "You need to be at least level 3 to access unit exchange"
  	 	 	},
  	 	 	"tut": {
@@ -3785,7 +3785,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Chcete koupit Unity nebo použít své stávající Unity?"
+ 	 	 	 	 	"Chcete koupit UNIT nebo použít své stávající UNIT?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Do you want to buy Units, or use your Units?"
@@ -4910,11 +4910,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"amount"
  	 	 	 	],
- 	 	 	 	"trans": "Toto daruje ${amount} Jednotky z vašeho účtu",
+ 	 	 	 	"trans": "Toto daruje ${amount} UNIT z vašeho účtu",
  	 	 	 	"eng": "This will donate ${amount} Unit from your account"
  	 	 	},
  	 	 	"notEnough": {
- 	 	 	 	"trans": "Nemáte dostatek Jednotek k darování.",
+ 	 	 	 	"trans": "Nemáte dostatek UNIT k darování.",
  	 	 	 	"eng": "You do not have enough Unit to donate."
  	 	 	}
  	 	}
@@ -4979,7 +4979,7 @@
  	 	 	"vars": [
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "${price} Unitů",
+ 	 	 	"trans": "${price} UNIT",
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"permanentDescription": {
