--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -28,7 +28,7 @@
  	 	 	 	"eng": "Arasaka Unit Exchange"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Vous pouvez acheter des objets d'améliorations globales ici",
+ 	 	 	 	"trans": "Vous pouvez acheter des objets d'amélioration globale ici",
  	 	 	 	"eng": "You can purchase global buff items here"
  	 	 	},
  	 	 	"canAccessError": {
@@ -37,7 +37,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Souhaitez-vous acheté des Unités, ou les utiliser ?"
+ 	 	 	 	 	"Souhaitez-vous acheter des Unités, ou les utiliser ?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Do you want to buy Units, or use your Units?"
