--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -294,7 +294,7 @@
  	 	 	 	 	"eng": "Start your adventure for epic loot here"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Begib dich zum Hyper Train Hauptbahnhof",
+ 	 	 	 	 	"trans": "Gehe zum Hyper Train Hauptbahnhof",
  	 	 	 	 	"eng": "Go to Hyper Train Central Station"
  	 	 	 	}
  	 	 	},
