--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -4064,7 +4064,7 @@
  	 	 	},
  	 	 	"noShowToggle": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "프로필 > 튜토리얼 탭에서 전체 튜토리얼을 볼 수 있습니다",
+ 	 	 	 	 	"trans": "프로필 > 가이드 탭에서 전체 가이드 볼 수 있습니다",
  	 	 	 	 	"eng": "You can see the full tutorial at Profile > Tutorial tab"
  	 	 	 	},
  	 	 	 	"label": {
@@ -4101,7 +4101,7 @@
  	 	 	 	"eng": "You will be MUTED if you breach any of the rules"
  	 	 	},
  	 	 	"footer2": {
- 	 	 	 	"trans": "프로필 > 튜토리얼 > 규칙 에서 전체 규칙을 찾을 수 있습니다",
+ 	 	 	 	"trans": "프로필 >  > 규칙 에서 전체 규칙을 찾을 수 있습니다",
  	 	 	 	"eng": "Full list of rules can be found in Profile > Tutorials > Rules"
  	 	 	},
  	 	 	"disagreeButtonButton": {
