--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -2070,7 +2070,7 @@
  	 	 	 	"eng": "Updates"
  	 	 	},
  	 	 	"tutorial": {
- 	 	 	 	"trans": "",
+ 	 	 	 	"trans": "가이드",
  	 	 	 	"eng": "tutorial"
  	 	 	},
  	 	 	"credits": {
