--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -4101,7 +4101,7 @@
  	 	 	 	"eng": "You will be MUTED if you breach any of the rules"
  	 	 	},
  	 	 	"footer2": {
- 	 	 	 	"trans": "프로필 >  > 규칙 에서 전체 규칙을 찾을 수 있습니다",
+ 	 	 	 	"trans": "프로필 > 가이드 > 규칙 에서 전체 규칙을 찾을 수 있습니다",
  	 	 	 	"eng": "Full list of rules can be found in Profile > Tutorials > Rules"
  	 	 	},
  	 	 	"disagreeButtonButton": {
