--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -36,7 +36,7 @@
  	 	},
  	 	"medical": {
  	 	 	"name": {
- 	 	 	 	"trans": "Навык создания медикаментов",
+ 	 	 	 	"trans": "Навык медицины",
  	 	 	 	"eng": "medical science"
  	 	 	}
  	 	},
@@ -71,7 +71,7 @@
  	 	 	},
  	 	 	"toStation": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Направиться к Центральному вокзалу Гиперпоездов",
+ 	 	 	 	 	"trans": "Отправиться к Центральному вокзалу Гиперпоездов",
  	 	 	 	 	"eng": "Go to Hyper Train Central Station"
  	 	 	 	},
  	 	 	 	"tut": {
@@ -79,23 +79,23 @@
  	 	 	 	 	"eng": "Start your adventure for epic loot here"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Направиться к Центральному вокзалу Гиперпоездов",
+ 	 	 	 	 	"trans": "Отправиться к Центральному вокзалу Гиперпоездов",
  	 	 	 	 	"eng": "Go to Hyper Train Central Station"
  	 	 	 	}
  	 	 	},
  	 	 	"toJob": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Направиться в Деловой район Шангри-Ла",
+ 	 	 	 	 	"trans": "Отправиться в Деловой район Шангри-Ла",
  	 	 	 	 	"eng": "Go to Shangri-La Commercial Area"
  	 	 	 	},
  	 	 	 	"tut": {
- 	 	 	 	 	"trans": "Здесь можно работать AFK, чтобы улучшить свои навыки",
+ 	 	 	 	 	"trans": "Здесь вы можете выполнять работу AFK, чтобы улучшить свои навыки",
  	 	 	 	 	"eng": "You can complete AFK jobs to increase your skills here"
  	 	 	 	}
  	 	 	},
  	 	 	"toMarket": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Направиться на Торговую площадь Шангри-Ла",
+ 	 	 	 	 	"trans": "Отправиться на Торговую площадь Шангри-Ла",
  	 	 	 	 	"eng": "Go to Shangri-La Market Street"
  	 	 	 	},
  	 	 	 	"tut": {
@@ -105,7 +105,7 @@
  	 	 	},
  	 	 	"toGang": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Направиться в Штаб-квартиру Банды",
+ 	 	 	 	 	"trans": "Отправиться в Штаб-квартиру Банды",
  	 	 	 	 	"eng": "Go to gang headquarters"
  	 	 	 	}
  	 	 	}
@@ -252,7 +252,7 @@
  	 	 	 	"eng": "Gang Headquarters"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[Банда]\r\n       Штаб-квартира для всех членов банды, служащая для планирования и осуществления операций",
+ 	 	 	 	"trans": "[Банда]\r\n       Штаб-квартира для тебя и твоих членов банды, служащая для планирования и осуществления операций",
  	 	 	 	"eng": "[Gang]\r\n        The headquarters for you and your gang members to plan and execute your next operation"
  	 	 	},
  	 	 	"cantEnterError": {
@@ -268,7 +268,7 @@
  	 	 	 	"eng": "Arasaka Unit Exchange"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Здесь ты можешь приобрести бонусы, распространяющиеся на всех игроков",
+ 	 	 	 	"trans": "Здесь ты можешь приобрести общие бонусы",
  	 	 	 	"eng": "You can purchase global buff items here"
  	 	 	},
  	 	 	"canAccessError": {
@@ -312,7 +312,7 @@
  	 	 	 	"eng": "Molecular 3d Printer"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Используй чертежи, чтобы напечатать новую экипировку",
+ 	 	 	 	"trans": "Здесь ты можешь использовать свои деньги, чтобы напечатать новую экипировку",
  	 	 	 	"eng": "You can use your Cache to print new equipment here"
  	 	 	},
  	 	 	"defaultLines": {
@@ -464,7 +464,7 @@
  	 	},
  	 	"increaseMedical": {
  	 	 	"name": {
- 	 	 	 	"trans": "Взлом клиники модификации тела",
+ 	 	 	 	"trans": "Клиника Взлома модификации тела",
  	 	 	 	"eng": "Hack a Body Mod Clinic"
  	 	 	},
  	 	 	"description": {
@@ -474,7 +474,7 @@
  	 	},
  	 	"increaseAmmo": {
  	 	 	"name": {
- 	 	 	 	"trans": "Улучшение навыка создания боеприпасов",
+ 	 	 	 	"trans": "Улучшение боеприпасов",
  	 	 	 	"eng": "Improve Ammunition"
  	 	 	},
  	 	 	"description": {
