--- a/contribution/lang/en.json
+++ b/contribution/lang/en.json
@@ -3267,8 +3267,8 @@
  	 	 	 	 	"eng": "Dungeons"
  	 	 	 	},
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots",
- 	 	 	 	 	"eng": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots"
+ 	 	 	 	 	"trans": "In dungeons, you will not heal after each fight and enemies are stronger, but there are more exp and loot",
+ 	 	 	 	 	"eng": "In dungeons, you will not heal after each fight and enemies are stronger, but there are more exp and loot"
  	 	 	 	}
  	 	 	},
  	 	 	"noHealingPrompt": {
